--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
             <div class="timeline-item">
               <div class="timeline-date">2022</div>
               <div class="timeline-content">
-                <h5>Junior Developer | Unreal Engine</h5>
+                <h5>Developer | Unreal Engine</h5>
                 <p>LandianMeta</p>
               </div>
             </div>
